# AlgoritmoDeOrdenacao

./: CMakeLists.txt  README.md  insertion_sort.c  main.c  quick_sort.c  testes.c
Headers/: bubble_sort.h  insertion_sort.h
funcoes/: lista_encadeada.c  lista_encadeada.h
funcoes/insertion_sort/: insertion_sort.c  insertion_sort.h
funcoes/merge_sort/: merge_sort.c  merge_sort.h
funcoes/metodoOrdenacao/: bubble_sort.c  bubble_sort.h  quick_sort.h
